--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   
   /* 💖 Headings */
   h1, h2 {
-    font-family: 'Pacifico', cursive;
+    font-family: 'Quicksand', sans-serif;
     color: #ff4d6d;
     margin-bottom: 20px;
     font-size: 2.2rem;
